--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,31 @@
     
 </head>
 <body>
+    <div id="container">
+        <div id="header">
+            <h1>Blog Post</h1>
+        </div>
+        <div id="menu">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="blogpost.html">Blog Post</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+        <div id="content">
+            <h2>Titulo del Post</h2>
+            <p>Este es el contenido del post</p>
+        </div>
+        <div id="sidebar">
+            <h2>Barra Lateral</h2>
+            <p>Este es el contenido de la barra lateral</p>
+        </div>
+        <div id="footer">
+            <p>Este es el pie de pagina</p>
+        </div>
+
+
+    </div>
 
     <h1> aqui vamos hacer un blog post</h1>
     <p> este es el parrafo de inicio</p>
