estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+
+        </div>
         <div id="header">
             <h1>Blog Post</h1>
         </div>
