cambios de tipografia y parrafo de git

--- a/blogpost.html
+++ b/blogpost.html
@@ -35,6 +35,7 @@
 
     <h1> aqui vamos hacer un blog post</h1>
     <p> este es el parrafo de inicio</p>
+    <p> que bueno es git y github</p>
 
 </body>
 
