inspirado concepto de programacion

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,11 +23,11 @@
             <p>Este es el contenido del post</p>
         </div>
         <div id="sidebar">
-            <h2>Barra Lateral</h2>
+            <h2>la vida es tan bella como las florez</h2>
             <p>Este es el contenido de la barra lateral</p>
         </div>
         <div id="footer">
-            <p>Este es el pie de pagina</p>
+            <p>creo que aprender a programar es facil faltas mas dedicacion</p>
         </div>
 
 
