año de nacimiento
porque puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>Blog psot Elkinlabrador</title>
+    <title>Blog psot Elkinlabrador 1993</title>
     <link rel="stylesheet" href="css/estilo.css">
     
 </head>
